добавил СиСС свойства

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЕДИНЫЙ ЦЕНТР ЗАПИСИ НА МРТ, КТ, РЕНТГЕН ИССЛЕДОВАНИЯ</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <header>
     <img alt="шапка линия" src="img/line-header-blue1.png" width="1920" height="118">
     <img alt="шапка доктор" src="img/background-header-1.png" width="1440" height="515">
     <img alt="телефон" src="img/phone-square.png" width="25" height="25">
-    <phone>+38 (093)-888-88-88</phone>
+    <phone class="ph">+38 (093)-888-88-88</phone>
+        <style>
+            phone {
+                color: chartreuse;
+            }
+        </style>
     <nav>
         <ul>
-            <li><b>Единый центр записи</b></li>
+            <li style=" color: darkmagenta"><b>Единый центр записи</b></li>
             <li>Главная</li>
             <li>Услуги</li>
             <li>Клиники и кабинеты</li>
@@ -29,9 +35,17 @@
         Вас клиники, цены на диагностику и порядок прохождения
         процедур, а так же записаться на исследование можно по
         телефону <phone>8 (093)-888-88-88</phone></p>
+<a class="lnk" href="https://www.it-oxygen.com/">https://www.it-oxygen.com</a>
+<a class="lnk2" href="https://www.it-oxygen.com/">https://www.it-oxygen.com</a>
 
-    <h2>Оставьте свой номер, а мы Вам перезвоним</h2>
 
+    <h2 class="text1">Оставьте свой номер, а мы Вам перезвоним</h2>
+
+    <h2 id="text2">Оставьте свой номер, а мы Вам перезвоним</h2>
+<br>
+<br>
+<br>
+<br>
 
     <form action="#" method="post">
         <label>
@@ -39,6 +53,11 @@
         </label>
         <button >Отправить</button>
     </form>
+<style>
+    input:focus {
+        color: indigo;
+    }
+</style>
     <br>
 
     <table width="100%" border="1" align="center" cellpadding="50" cellspacing=0">
