--- a/index.html
+++ b/index.html
@@ -8,72 +8,92 @@
 </head>
 <body>
 <header>
-    <img alt="шапка линия" src="img/line-header-blue1.png" width="1920" height="118">
-    <img alt="шапка доктор" src="img/background-header-1.png" width="1440" height="515">
-    <img alt="телефон" src="img/phone-square.png" width="25" height="25">
-    <phone class="ph">+38 (093)-888-88-88</phone>
-        <style>
-            phone {
-                color: chartreuse;
-            }
-        </style>
+    <div class="line-header">
+        <figure>
+            <img alt="логотип" src="img/logo.png" width="64" height="57"> <!-- это можно сделать как иконку и текст (картинка и описание) либо через
+        картинку с описанием-->
+            <figcaption>Единый центр записи</figcaption>
+        </figure>
+
+        <figure>
+            <img alt="телефон" src="img/phone-square.png" width="25" height="25">
+            <figcaption>+38 (093)-888-88-88</figcaption>
+        </figure>
+    </div>
+
+    <!-- это нужно сделать заливкой бэкграундом как-то-->
+
+
+
     <nav>
         <ul>
-            <li style=" color: darkmagenta"><b>Единый центр записи</b></li>
-            <li>Главная</li>
-            <li>Услуги</li>
-            <li>Клиники и кабинеты</li>
-            <li>О нас</li>
-            <li>Статьи</li>
-            <li>FAQ</li>
-            <li>Контакты</li>
+            <li>
+                <a href="#">Главная</a>
+            </li>
+            <li>
+                <a href="#">Услуги</a>
+            </li>
+            <li>
+                <a href="#">Клиники и кабинеты</a>
+            </li>
+            <li>
+                <a href="#">О нас</a>
+            </li>
+            <li>
+                <a href="#">Статьи</a>
+            </li>
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+            <li>
+                <a href="#">Контакты</a>
+            </li>
         </ul>
     </nav>
 </header>
-    <p>Всю необходимую информацию о том,как и в каком центре
+<section class="line-header2">
+        <p>Всю необходимую информацию о том,как и в каком центре
         сделать МРТ, КТ и рентген исследования, сравнить интересующие
         Вас клиники, цены на диагностику и порядок прохождения
         процедур, а так же записаться на исследование можно по
-        телефону <phone>8 (093)-888-88-88</phone></p>
-<a class="lnk" href="https://www.it-oxygen.com/">https://www.it-oxygen.com</a>
-<a class="lnk2" href="https://www.it-oxygen.com/">https://www.it-oxygen.com</a>
-
-
+        телефону 8 (093)-888-88-88
+    </p>
     <h2 class="text1">Оставьте свой номер, а мы Вам перезвоним</h2>
-
-    <h2 id="text2">Оставьте свой номер, а мы Вам перезвоним</h2>
-<br>
-<br>
-<br>
-<br>
-
     <form action="#" method="post">
         <label>
             <input placeholder="+380" type="tel">
         </label>
-        <button >Отправить</button>
+        <button>Отправить</button>
     </form>
-<style>
-    input:focus {
-        color: indigo;
-    }
-</style>
-    <br>
+</section>
 
-    <table width="100%" border="1" align="center" cellpadding="50" cellspacing=0">
-        <tr>
-            <td><img src="img/Best-threatment.png">
-                <p><b>Best threatment</b></p>
-            </td>
-            <td><img src="img/Emergency-Help.png">
-                <p><b>Emergency Help</b></p>
-            </td>
-            <td><img src="img/Medical-Staff.png">
-                <p><b>Medical Staff</b></p>
-            </td>
-            <td><img src="img/Qualified-Doctors.png">
-                <p><b>Qualified Doctors</b></p>
-            </td>
-        </tr>
+<div>
+    <figure>
+        <img src="img/Best-threatment.png">
+        <figcaption>Best threatment</figcaption>
+    </figure>
+</div>
+
+<div>
+    <figure>
+        <img src="img/Emergency-Help.png">
+        <figcaption>Emergency Help</figcaption>
+    </figure>
+</div>
+
+<div>
+    <figure>
+        <img src="img/Medical-Staff.png">
+        <figcaption>Medical-Staff</figcaption>
+    </figure>
+</div>
+
+<div>
+    <figure>
+        <img src="img/Qualified-Doctors.png">
+        <figcaption>Qualified Doctors</figcaption>
+    </figure>
+</div>
+
 </body>
 </html>
