начал добавлять флексы

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
 <header>
     <div class="line-header">
-        <figure>
+        <figure class="logo">
             <img alt="логотип" src="img/logo.png" width="64" height="57"> <!-- это можно сделать как иконку и текст (картинка и описание) либо через
         картинку с описанием-->
-            <figcaption>Единый центр записи</figcaption>
+            <figcaption class="logo-text">Единый центр записи</figcaption>
         </figure>
 
-        <figure>
+        <figure class="header-telephone">
             <img alt="телефон" src="img/phone-square.png" width="25" height="25">
             <figcaption>+38 (093)-888-88-88</figcaption>
         </figure>
     </div>
 
     <nav>
-        <ul>
+        <ul class="line-header-nav">
             <li>
                 <a href="#">Главная</a>
             </li>
@@ -65,28 +65,28 @@
 
 <div>
     <figure>
-        <img src="img/Best-threatment.png">
+        <img src="img/best-threatment.png">
         <figcaption>Best threatment</figcaption>
     </figure>
 </div>
 
 <div>
     <figure>
-        <img src="img/Emergency-Help.png">
+        <img src="img/emergency-help.png">
         <figcaption>Emergency Help</figcaption>
     </figure>
 </div>
 
 <div>
     <figure>
-        <img src="img/Medical-Staff.png">
+        <img src="img/medical-staff.png">
         <figcaption>Medical-Staff</figcaption>
     </figure>
 </div>
 
 <div>
     <figure>
-        <img src="img/Qualified-Doctors.png">
+        <img src="img/qualified-doctors.png">
         <figcaption>Qualified Doctors</figcaption>
     </figure>
 </div>
