--- a/index.html
+++ b/index.html
@@ -12,40 +12,42 @@
         <figure class="logo">
             <img alt="логотип" src="img/logo.png" width="64" height="57"> <!-- это можно сделать как иконку и текст (картинка и описание) либо через
         картинку с описанием-->
-            <figcaption class="logo-text">Единый центр записи</figcaption>
+            <figcaption class="logo-text">Единый <br> центр записи</figcaption>
         </figure>
 
-        <figure class="header-telephone">
-            <img alt="телефон" src="img/phone-square.png" width="25" height="25">
-            <figcaption>+38 (093)-888-88-88</figcaption>
-        </figure>
+        <div class="header-right-side">
+            <figure class="header-telephone">
+                <img alt="телефон" src="img/phone-square.png" width="25" height="25">
+                <figcaption>+38 (093)-888-88-88</figcaption>
+            </figure>
+
+            <nav>
+                <ul class="line-header-nav">
+                    <li class="item">
+                        <a href="#">Главная</a>
+                    </li>
+                    <li class="item">
+                        <a href="#">Услуги</a>
+                    </li>
+                    <li class="item">
+                        <a href="#">Клиники и кабинеты</a>
+                    </li>
+                    <li class="item">
+                        <a href="#">О нас</a>
+                    </li>
+                    <li class="item">
+                        <a href="#">Статьи</a>
+                    </li>
+                    <li class="item">
+                        <a href="#">FAQ</a>
+                    </li>
+                    <li class="item">
+                        <a href="#">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
-
-    <nav>
-        <ul class="line-header-nav">
-            <li>
-                <a href="#">Главная</a>
-            </li>
-            <li>
-                <a href="#">Услуги</a>
-            </li>
-            <li>
-                <a href="#">Клиники и кабинеты</a>
-            </li>
-            <li>
-                <a href="#">О нас</a>
-            </li>
-            <li>
-                <a href="#">Статьи</a>
-            </li>
-            <li>
-                <a href="#">FAQ</a>
-            </li>
-            <li>
-                <a href="#">Контакты</a>
-            </li>
-        </ul>
-    </nav>
 </header>
 <section class="line-header2">
     <p>Всю необходимую информацию о том,как и в каком центре
